--- a/linux-4.14.18/arch/Kconfig
+++ b/linux-4.14.18/arch/Kconfig
@@ -864,6 +864,15 @@ config OLD_SIGACTION
 config COMPAT_OLD_SIGACTION
 	bool
 
+config SCM
+    bool"hybrid memory with dram and scm"
+    default y
+
+config SCM_DEBUG
+    bool"scm_debug"
+    default y
+
+
 config ARCH_NO_COHERENT_DMA_MMAP
 	bool
 
